tests/compilefail72.pas
program compilefail72(output);
{invalid use of sqr}


var r:boolean;


begin
	r := sqr(r);
end.
